# slpn-miner

./: .gitignore  LICENSE.txt  README.md  Readme.md  main.py  pyproject.toml  requirements.txt  setup.py
data/ccc20/: a_id02.pnml  a_id02_uemsc.pnml
data/close/: BPI_Challenge_2013_closed.slang
data/domestic/: domestic.slang  domestic_df0.9.pnml  domestic_df09_er_spn.pnml  domestic_df09_uemsc_spn.pnml  domestic_id0.2.pnml  domestic_id02_er_spn.pnml  domestic_id02_uemsc_spn.pnml
data/hospital/: hospital.slang  hospital_df09.pnml  hospital_df09_er.pnml  hospital_id02.pnml  hospital_id03.pnml  rtf_heuristic_uemsc.pnml
data/offer/: offer.slang  offer_df0.9.pnml  offer_df09_er_spn.pnml  offer_df09_uemsc_spn.pnml  offer_id0.2.pnml  offer_id02_er_spn.pnml  offer_id02_uemsc_spn.pnml
data/open/: BPI_Challenge_2013_open.slang  BPI_Challenge_2017 - Offer log.slang
data/prAm6/: prAm6.pnml  prAm6_uemsc.pnml
slpn_miner/: __init__.py  log_util.py  slang_importer.py  slpn_frequency_weights_discovery.py  slpn_opt_entropic_relevance_discovery.py  slpn_opt_uemsc_discovery.py  slpn_unit_weights_discovery.py  slpn_visualiser.py  stochastic_cross_product.py  stochastic_equation_system.py  stochastic_reachability_graph.py  stochastic_transition_system.py  symbolic_conversion.py  trace_dfa.py  util.py
src/: README.md  log_util.py  main.py  slpn_exporter.py  slpn_opt_entropic_relevance_discovery.py  slpn_opt_uemsc_discovery.py  slpn_visualiser.py  stochastic_cross_product.py  stochastic_equation_system.py  stochastic_reachability_graph.py  symbolic_conversion.py  util.py
(+51 files in other folders)
